[gd_scene load_steps=2 format=3 uid="uid://5uwouo5bc741"]

[ext_resource type="Script" path="res://Scripts/multiplayer/menu.gd" id="1_fdfo8"]

[node name="multiplayer_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdfo8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -277.0
offset_top = -134.0
offset_right = 277.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "label"

[node name="host_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Host"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ip_input" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 90

[node name="join_button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Join"

[node name="START" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "START"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/host_button" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/join_button" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/START" to="." method="_on_button_pressed"]
